--- a/index.html
+++ b/index.html
@@ -2,47 +2,48 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-		<title>Shimanti's Webpages</title> 
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-		
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script>
-			$(document).bind('mobileinit',function(){
-				$.mobile.pushStateEnabled = false;
-			});
-		</script>
-		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-		
-	</head> 
-	<body> 
+    <title>Shimanti's Webpages</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style2.css" rel="stylesheet"/>
+ </head>
+ 
+ <body>
+   <h2>Shimanti's Webpages</h2>
+       <!--<li><a href="http://watzthis.x10host.com/02flash/index.html"> My First App</a></li>-->
+       <!--<li><a href="http://watzthis.x10host.com/03recipes/index.html"> HTML - Recipe</a></li>-->
+       <!--<li><a href="http://watzthis.x10host.com/04watzthis/index.html"> CSS - WatzThis?</a></li>-->
+       <!--<li><a href="http://watzthis.x10host.com/05js/index.html"> JS - Flash!</a></li>-->
+       <!--<li><a href="http://watzthis.x10host.com/06jqm/index.html"> JQM - Updates</a></li>-->
+       <!--<li><a href="http://watzthis.x10host.com/01tests/index.html"> My Beta Tests</a></li>-->
+  <div>
+			
+			<h2>Finished Pages</h2>
+			<ul>
+						<li><a href="http://watzthis.x10host.com/01tests/05shimweb/shimanti.html"> Shimanti's Site</a></li>
+						<li><a href="http://watzthis.x10host.com/01tests/07quiz_scratch/quiz.html"> Javascipt Quiz</a></li>
+			</ul>
+			
+			<h2>App tests</h2>
+   <ul>
+       <li><a href="http://watzthis.x10host.com/01tests/01quiz/quiz.html"> My First Quiz on Javascript</a></li>
+       <li><a href="http://watzthis.x10host.com/01tests/02sfoo/sfoo.html"> Shortcutfoo - CSS design</a></li>
+       <li><a href="http://watzthis.x10host.com/01tests/04w3/quiz/css_quiz.html"> W3 CSS quiz - CSS design </a></li>
+       <li><a href="http://watzthis.x10host.com/01tests/03buttontest/qa1.html"> Button Test - still to do</a></li>
+       <li><a href="http://watzthis.x10host.com/01tests/03buttontest/buttons"> Sample Buttons</a></li>
+   </ul>
 
-		<div data-role="page" data-theme="a">
-		
-			<div data-role="header">
-				<h1>Shimanti's Webpages</h1>
-			</div><!-- /header -->
-
-			<div data-role="content">
-            <h1>Shimanti's Webpages</h1>
-             <h2>Here's a directory of files mostly from my Mobile App Development Class.</h2>
-
-            <ul data-role="listview">
-				<li><a href="http://watzthis.x10host.com/01tests/05shimweb/shimanti.html"> Shimanti's Bio</a></li>
-				<li><a href="http://watzthis.x10host.com/02flash/index.html"> My First App</a></li>
-				<li><a href="http://watzthis.x10host.com/03recipes/index.html"> HTML - Recipe</a></li>
-				<li><a href="http://watzthis.x10host.com/04watzthis/index.html"> CSS - WatzThis?</a></li>
-				<li><a href="http://watzthis.x10host.com/05js/index.html"> JS - Flash!</a></li>
-				<li><a href="http://watzthis.x10host.com/06jqm/index.html"> JQM - Updates</a></li>
-				<li><a href="http://watzthis.x10host.com/01tests/index.html"> My Beta Tests</a></li>
-            </ul>
-			</div><!-- /content -->
-        
-			<div data-role="footer">
-				  <h3> Thanks for checking my stuff out</h3>
-				  <h3> &copy Shimanti Guha 2019</h3>
-			</div><!-- /footer -->
-		</div><!-- /page -->
-
-	</body>
+			<h2>Mobile App Class</h2>
+   <ul>
+       <li><a href="http://watzthis.x10host.com/02flash/flash.html"> First App - Flash/WatzThis</a></li>
+       <li><a href="http://watzthis.x10host.com/02flash/about.html"> About Me</a></li>
+       <li><a href="http://watzthis.x10host.com/03recipes/pasta.html"> One-Pot-Pasta Recipe</a></li>   
+       <li><a href="http://watzthis.x10host.com/03recipes/pasta2.html"> Alternative Recipe</a></li>  
+       <li><a href="http://watzthis.x10host.com/04watzthis/doc1.html"> Simple CSS for WatzThis App</a></li>
+       <li><a href="http://watzthis.x10host.com/04watzthis/doc2.html"> Fancy Bootstrap CSS on WatzThis Doc</a></li>
+       <li><a href="http://watzthis.x10host.com/05js/flash.html"> Javascript on WatzThis</a></li>
+       <li><a href="http://watzthis.x10host.com/06jqm/watzapp2.html"> JQM theme on WatzThis Docs</a></li>
+   </ul>
+			
+  </div>
+ </body>
 </html>
