--- a/01tests/01quiz/old/quiz1.html
+++ b/01tests/01quiz/old/quiz1.html
@@ -4,7 +4,7 @@
 <head>
     <title>Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">  
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <label class="option"><input type="radio" name="option" value="2"/><span id="opt2"></span></label>
                 <label class="option"><input type="radio" name="option" value="3"/><span id="opt3"></span></label>
                 <label class="option"><input type="radio" name="option" value="4"/><span id="opt4"></span></label>
-                <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">  Next Question</button>
+                <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">Next Question</button>
     </div>
     <div id="result" class="container result" style="display:none;"> 
     </div>
