--- a/index.html
+++ b/index.html
@@ -19,30 +19,34 @@
 			
 			<h2>Finished Pages</h2>
 			<ul>
-						<li><a href="http://watzthis.x10host.com/01tests/05shimweb/shimanti.html"> Shimanti's Site</a></li>
-						<li><a href="http://watzthis.x10host.com/01tests/07quiz_scratch/quiz.html"> Javascipt Quiz</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/05shimweb/shimanti.html"> Shimanti's Site</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/01quiz/flashcard2.html"> Javascript Flashcards</a></li>
 			</ul>
 			
-			<h2>App tests</h2>
+			<h2>Research for Quiz App</h2>
    <ul>
-       <li><a href="http://watzthis.x10host.com/01tests/01quiz/quiz.html"> My First Quiz on Javascript</a></li>
-       <li><a href="http://watzthis.x10host.com/01tests/02sfoo/sfoo.html"> Shortcutfoo - CSS design</a></li>
-       <li><a href="http://watzthis.x10host.com/01tests/04w3/quiz/css_quiz.html"> W3 CSS quiz - CSS design </a></li>
-       <li><a href="http://watzthis.x10host.com/01tests/03buttontest/qa1.html"> Button Test - still to do</a></li>
-       <li><a href="http://watzthis.x10host.com/01tests/03buttontest/buttons"> Sample Buttons</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/01quiz/quiz2.html"> JS Quiz - Style 1</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/01quiz/quiz.html"> JS Quiz - Desktop Style</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/02sfoo/sfoo.html"> Shortcutfoo Design</a></li>
+					<li><a href="http://watzthis.x10host.com/01tests/03buttontest/buttons"> Sample Buttons</a></li>
    </ul>
 
 			<h2>Mobile App Class</h2>
    <ul>
-       <li><a href="http://watzthis.x10host.com/02flash/flash.html"> First App - Flash/WatzThis</a></li>
-       <li><a href="http://watzthis.x10host.com/02flash/about.html"> About Me</a></li>
-       <li><a href="http://watzthis.x10host.com/03recipes/pasta.html"> One-Pot-Pasta Recipe</a></li>   
-       <li><a href="http://watzthis.x10host.com/03recipes/pasta2.html"> Alternative Recipe</a></li>  
-       <li><a href="http://watzthis.x10host.com/04watzthis/doc1.html"> Simple CSS for WatzThis App</a></li>
-       <li><a href="http://watzthis.x10host.com/04watzthis/doc2.html"> Fancy Bootstrap CSS on WatzThis Doc</a></li>
-       <li><a href="http://watzthis.x10host.com/05js/flash.html"> Javascript on WatzThis</a></li>
-       <li><a href="http://watzthis.x10host.com/06jqm/watzapp2.html"> JQM theme on WatzThis Docs</a></li>
-   </ul>
+					<li><a href="http://watzthis.x10host.com/02flash/flash.html"> First App - Flash/WatzThis</a></li>
+					<li><a href="http://watzthis.x10host.com/02flash/about.html"> About Me</a></li>
+					<li><a href="http://watzthis.x10host.com/03recipes/pasta.html"> One-Pot-Pasta Recipe</a></li>   
+					<li><a href="http://watzthis.x10host.com/03recipes/pasta2.html"> Alternative Recipe</a></li>  
+					<li><a href="http://watzthis.x10host.com/04watzthis/docs1.html"> Simple CSS for WatzThis App</a></li>
+					<li><a href="http://watzthis.x10host.com/04watzthis/docs2.html"> Fancy Bootstrap CSS on WatzThis Doc</a></li>
+					<li><a href="http://watzthis.x10host.com/05js/flash.html"> Javascript on WatzThis App</a></li>
+					<li><a href="http://watzthis.x10host.com/06jqm/watzapp2.html"> JQM theme on WatzThis Docs</a></li>
+					<li><a href="http://watzthis.x10host.com/07geo_storage/watzthis.html"> Geolocation on WatzThis App</a></li>
+					<li><a href="http://watzthis.x10host.com/08webAPIs/watzthis.html"> API on WatzThis App</a></li>
+					<li><a href="http://watzthis.x10host.com/09animation/index2.html"> Animation on WatzThis App</a></li>		
+					<li><a href="http://watzthis.x10host.com/10optimizing_mobile/watzthis.html"> Optimizing on WatzThis App</a></li>
+					<li><a href="http://watzthis.x10host.com/10optimizing_mobile/index.html"> Ghost on WatzThis App</a></li>
+			</ul>
 			
   </div>
  </body>
